css/custom/google.css
.ab_button
{
    --ml-buttonbackground-background-color:Background;
}

button.ab_button > span > img
{
    filter: invert(var(--ml-invert,0));
}

.gb_Z:hover .gb_3:not(imp), .gsfi:not(imp)
{
    background-color: transparent;
}

.gbip, .gbii
{
    --ml-backgroundimage:Image;
}
.gbip:before, .gbii:before
{
    --ml-ignore:true;
}

color-palette,
.goog-slider-thumb,
div[class*="slider-background"],
div[style="display:table-row"]>div.rnt3Ze[data-ved] {
    --ml-ignore:true;
}

[role="button"]>.gb_Rc.gb_Sc.gb_hc {
    --ml-no-invert:true;
}

html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) div.sfbg>div.sfbgg:not(#imp):not(imp):not(.imp),
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) #hdtb[role="navigation"]>#hdtbSum:not(#imp):not(imp):not(.imp) {
    background-color: var(--ml-main-alt-background-color)!important;
}
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) div.sfbg>div.sfbgg:not(#imp):not(imp):not(.imp) *,
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) #hdtb[role="navigation"]>#hdtbSum:not(#imp):not(imp):not(.imp) *,
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) #logocont:not(#imp):not(imp):not(.imp),
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) .tsf-p:not(#imp):not(imp):not(.imp),
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) .sfibbbc:not(#imp):not(imp):not(.imp),
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) form.tsf:not(#imp):not(imp):not(.imp),
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) button.sbico-c:not(#imp):not(imp):not(.imp),
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) .lst-c:not(#imp):not(imp):not(.imp),
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) #searchform,
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) #gb *,
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) #logocont *,
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) .action-menu:not(#imp):not(imp):not(.imp)>.ab_button:not(#imp):not(imp):not(.imp) {
    background-color:transparent!important;
}
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) #gbw div.gb_xb.gb_fa.gb_g:not(#imp):not(imp):not(.imp),
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) #gbw a.gb_b[role="button"]:not(#imp):not(imp):not(.imp)>div.gb_Rc.gb_Sc.gb_hc[style*="filter"]:not(#imp):not(imp):not(.imp),
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) #gbwa [role="region"]:not(#imp):not(imp):not(.imp) {
    background-color: var(--ml-main-background-color)!important;
}
html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) .action-menu .mn-dwn-arw:not(#imp):not(imp):not(.imp) {
    border-left-color: transparent!important;
    border-right-color: transparent!important;
    border-top-color: var(--ml-main-border-color) !important;
    border-bottom-color: var(--ml-main-border-color) !important;
}

html[ml-platform="mobile"] .sbico {
    --ml-ignore:true;
}

